tests/errors/include_angle.HC
//ERR: no <> form
#include <stdio.h>
"hi\n";
